helloworld-app/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: docker
  name: docker
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker
  template:
    metadata:
      labels:
        app: docker
    spec:
      imagePullSecrets:
        - name: hosted-regcred
      containers:
        - name: docker
          image: "10.4.0.163:8083/helloworld-izaitsava:latest"
          imagePullPolicy: Always
          ports:
            - name: tomcat-port
              containerPort: 8080
          volumeMounts:
            - name: docker-socket
              mountPath: /var/run/docker.sock
          readinessProbe:
            httpGet:
              port: 8080
              path: /helloworld-ws/
          livenessProbe:
            httpGet:
              port: 8080
              path: /helloworld-ws/
      securityContext:
        fsGroup: 1000
      volumes:
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
            type: File
---
apiVersion: v1
kind: Service
metadata:
  name: docker-service
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
  selector:
    app: docker
